core/testing/snapshots/errors/runtime/gutter_width.snap
### TITLE ###
Gutter width accounts for context lines
### DESCRIPTION ###
When a label is on a single-digit line (e.g. line 9) but context lines extend
into double digits (line 10+), the gutter must be wide enough for all displayed
lines so that the | pipes stay vertically aligned.
### INPUT ###
a = 1
b = 2
c = 3
d = 4
e = 5
f = 6
g = 7
h = 8
i = 1 / 0
j = 10
### STDERR ###
error[RAD20036]: Divisor was 0, cannot divide by 0
  --> <script>:9:9
   |
 8 | h = 8
 9 | i = 1 / 0
   |         ^
10 | j = 10
   |
   = info: rad explain RAD20036


### EXIT ###
1
